--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "sass": "^1.78.0"
   }
 }
